--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,12 @@
 click==6.7
 Flask==0.12.2
 Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+nose==1.3.7
 psycopg2==2.7.3.1
+pytz==2017.2
 SQLAlchemy==1.1.14
 Werkzeug==0.12.2
