--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,19 @@
 version: '2'
 
 services:
-  #
-  # frontend:
-  #   build: ./frontend
-  #   # restart: always
-  #   expose:
-  #     # Expose webpack for reverse proxy
-  #      - "3000"
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     # mount local working directory for development
-  #     - ./frontend:/usr/src/app
-  #   working_dir: /usr/src/app
-  #   command: ["bash", "-c", "yarn install && webpack-dev-server"]
+
+  frontend:
+    build: ./frontend
+    # restart: always
+    expose:
+    - "3000"
+    ports:
+      - "3000:3000"
+    volumes:
+      # mount local working directory for development
+      - ./frontend:/usr/src/app
+    working_dir: /usr/src/app
+    command: ["bash", "-c", "yarn install && webpack-dev-server"]
 
   server:
     env_file: .env
@@ -26,10 +25,11 @@ services:
       - "8000:8000"
     links:
      - database:database
+     - frontend:frontend
     environment:
       - FLASK_DEBUG=1
       - FLASK_APP=run.py
-      - SESSION_COOKIE_NAME=localhost
+      - DEV_FRONTEND_URI=http://frontend:3000
     volumes:
       # Mount server directory to local for development
       - ./server:/usr/src/local
