--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,17 @@
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 nose==1.3.7
 psycopg2==2.7.3.1
 pytz==2017.2
+requests==2.18.4
 SQLAlchemy==1.1.14
+urllib3==1.22
 Werkzeug==0.12.2
