--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,26 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "4.0.0-beta",
+    "css-loader": "^0.28.7",
+    "exports-loader": "^0.6.4",
+    "imports-loader": "^0.7.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "react-hot-loader": "next",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "bootstrap-loader": "^2.2.0",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "tether": "^1.4.0"
   }
 }
