Add linters and toolings. Add UI code studs.

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,16 +1,32 @@
 {
   "presets": [
     [
-      "env", {
+      "env",
+      {
         "modules": false,
+        "useBuiltIns": true,
         "targets": {
-          "browsers": "> 2%"
-        },
+          "browsers": [
+            "last 2 versions",
+            "ios_saf >= 8",
+            "not IE <= 10",
+            "chrome >= 49",
+            "firefox >= 49",
+            "> 1%"
+          ]
+        }
       }
     ],
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "transform-decorators-legacy",
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
   ]
 }
