--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-beta",
     "css-loader": "^0.28.7",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.3.0",
     "exports-loader": "^0.6.4",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "prettier": "^1.7.0",
     "react-hot-loader": "next",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
@@ -32,6 +37,8 @@
   "dependencies": {
     "bootstrap-loader": "^2.2.0",
     "jquery": "^3.2.1",
+    "mobx": "^3.3.0",
+    "mobx-react": "^4.3.2",
     "popper.js": "^1.12.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
