Add stud for timeline UI

--- a/frontend/.bootstraprc
+++ b/frontend/.bootstraprc
@@ -42,7 +42,7 @@ extractStyles: false
 # Import your custom styles here
 # Usually this endpoint-file contains list of @imports of your application styles
 #
-# appStyles: ./path/to/your/app/styles/endpoint.scss
+appStyles: ./src/styles/app.scss
 
 
 ### Bootstrap styles
