--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -21,7 +21,7 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
-    "transform-decorators-legacy",
+    ["transform-class-properties", { "spec": true }],
     [
       "transform-object-rest-spread",
       {
