--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -36,12 +37,14 @@
   },
   "dependencies": {
     "bootstrap-loader": "^2.2.0",
+    "d3": "^4.10.2",
     "jquery": "^3.2.1",
     "mobx": "^3.3.0",
     "mobx-react": "^4.3.2",
     "popper.js": "^1.12.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-measure": "^2.0.2",
     "tether": "^1.4.0"
   }
 }
