--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,4 @@
+arrow==0.10.0
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
@@ -10,8 +11,10 @@ Jinja2==2.9.6
 MarkupSafe==1.0
 nose==1.3.7
 psycopg2==2.7.3.1
+python-dateutil==2.6.1
 pytz==2017.2
 requests==2.18.4
+six==1.11.0
 SQLAlchemy==1.1.14
 urllib3==1.22
 Werkzeug==0.12.2
