--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ arrow==0.10.0
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+enum34==1.1.6
 Flask==0.12.2
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
