--- a/frontend/.bootstraprc
+++ b/frontend/.bootstraprc
@@ -30,6 +30,7 @@ extractStyles: false
 # See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
 # preBootstrapCustomizations: ./path/to/bootstrap/pre-customizations.scss
+preBootstrapCustomizations: ./src/styles/bootstrap-pre.scss
 
 
 # This gets loaded after bootstrap/variables is loaded
