--- a/frontend/.bootstraprc
+++ b/frontend/.bootstraprc
@@ -66,22 +66,22 @@ styles:
   type: true
 
   # Components
-  alert: true
+  # alert: true
   badge: true
-  breadcrumb: true
+  # breadcrumb: true
   button-group: true
   card: true
   close: true
   custom-forms: true
   dropdown: true
   input-group: true
-  jumbotron: true
+  # jumbotron: true
   list-group: true
-  media: true
+  # media: true
   nav: true
   navbar: true
   pagination: true
-  progress: true
+  # progress: true
   transitions: true
 
   # Components w/ JavaScript
@@ -95,14 +95,14 @@ styles:
 
 ### Bootstrap scripts
 scripts:
-  alert: true
+  # alert: true
   button: true
-  carousel: true
-  collapse: true
-  dropdown: true
-  modal: true
-  popover: true
-  scrollspy: true
-  tab: true
-  tooltip: true
+  # carousel: true
+  # collapse: true
+  # dropdown: true
+  # modal: true
+  # popover: true
+  # scrollspy: true
+  # tab: true
+  # tooltip: true
   util: true
